tests/errors/module_variable_initializer_cycle.dang
# Direct module variable initializer cycles are rejected statically.
staticCycleA: String! = staticCycleB
staticCycleB: String! = staticCycleA
